--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # user experiments directory
 YOLOX_outputs/
 datasets/
+darknet_sbatch.sh
+yolox_container.sif
 # do not ignore datasets under yolox/data
 !*yolox/data/datasets/
 
